@@ -2,8 +2,9 @@
 //
 // RQuantLib -- R interface to the QuantLib libraries
 //
-// Copyright (C) 2002 - 2009 Dirk Eddelbuettel <edd@debian.org>
+// Copyright (C) 2002 - 2009  Dirk Eddelbuettel 
 // Copyright (C) 2005 - 2006  Dominick Samperi
+// Copyright (C) 2010         Dirk Eddelbuettel and Khanh Nguyen
 //
 // $Id$
 //
@@ -317,6 +318,7 @@ makeProcess(const boost::shared_ptr<Quote>& u,
 int dateFromR(const RcppDate &d) {
     return(d.getJDN() - RcppDate::Jan1970Offset + RcppDate::QLtoJan1970Offset);
 }
+
 DayCounter getDayCounter(const double n){
     if (n==0) return Actual360();
     else if (n==1) return Actual365Fixed();
@@ -326,6 +328,7 @@ DayCounter getDayCounter(const double n){
     else if (n==5) return SimpleDayCounter();
     else  return Thirty360();
 }
+
 BusinessDayConvention getBusinessDayConvention(const double n){
     if (n==0) return Following;
     else if (n==1) return ModifiedFollowing;
@@ -333,12 +336,14 @@ BusinessDayConvention getBusinessDayConvention(const double n){
     else if (n==3) return ModifiedPreceding;
     else  return Unadjusted;
 }
+
 Compounding getCompounding(const double n){
     if (n==0) return Simple;
     else if (n==1) return Compounded;
     else if (n==2) return Continuous;
     else return SimpleThenCompounded;
 }
+
 Frequency getFrequency(const double n){
 
     Frequency f;
@@ -358,8 +363,6 @@ Frequency getFrequency(const double n){
     else f = OtherFrequency;   
 
     return f;
-
-
 }
 
 Period periodByTimeUnit(int length, std::string unit){
@@ -371,12 +374,14 @@ Period periodByTimeUnit(int length, std::string unit){
     return Period(length, tu);
 
 }
+
 TimeUnit getTimeUnit(const double n){
     if (n==0) return Days;
     else if (n==1) return Weeks;
     else if (n==2) return Months;
     else return Years;
 }
+
 DateGeneration::Rule getDateGenerationRule(const double n){
     if (n==0) return DateGeneration::Backward;
     else if (n==1) return DateGeneration::Forward;
@@ -384,61 +389,10 @@ DateGeneration::Rule getDateGenerationRule(const double n){
     else if (n==3) return DateGeneration::ThirdWednesday;
     else if (n==4) return DateGeneration::Twentieth;
     else return DateGeneration::TwentiethIMM;
-
 }
-Calendar* getCalendar(SEXP calParameters){
-    RcppParams rparam(calParameters);
-    std::string    calstr = rparam.getStringValue("calendar");
-    Calendar* pcal = NULL;
-    if (calstr == "TARGET") { 		// generic calendar 
-        pcal = new TARGET();
-        
-    } else if (calstr == "Canada" || calstr == "Canada/Settlement") {
-        pcal = new Canada(Canada::Settlement);
-    } else if (calstr == "Canada/TSX") {
-        pcal = new Canada(Canada::TSX);
-        
-    } else if (calstr == "Germany" || calstr == "Germany/FrankfurtStockExchange") {
-        pcal = new Germany(Germany::FrankfurtStockExchange);
-    } else if (calstr == "Germany/Settlement") {
-        pcal = new Germany(Germany::Settlement);
-    } else if (calstr == "Germany/Xetra") {
-        pcal = new Germany(Germany::Xetra);
-        } else if (calstr == "Germany/Eurex") {
-        pcal = new Germany(Germany::Eurex);
-        
-    } else if (calstr == "Italy" || calstr == "Italy/Settlement") {
-        pcal = new Italy(Italy::Settlement);
-        } else if (calstr == "Italy/Exchange") {
-        pcal = new Italy(Italy::Exchange);
-        
-    } else if (calstr == "Japan") {
-        pcal = new Japan();
-        
-    } else if (calstr == "UnitedKingdom" || calstr == "UnitedKingdom/Settlement") {
-        pcal = new UnitedKingdom(UnitedKingdom::Settlement);
-        } else if (calstr == "UnitedKingdom/Exchange") {
-        pcal = new UnitedKingdom(UnitedKingdom::Exchange);
-    } else if (calstr == "UnitedKingdom/Metals") {
-        pcal = new UnitedKingdom(UnitedKingdom::Metals);
-        
-    } else if (calstr == "UnitedStates" || calstr == "UnitedStates/Settlement") {
-        pcal = new UnitedStates(UnitedStates::Settlement);
-    } else if (calstr == "UnitedStates/NYSE") {
-        pcal = new UnitedStates(UnitedStates::NYSE);
-        } else if (calstr == "UnitedStates/GovernmentBond") {
-        pcal = new UnitedStates(UnitedStates::GovernmentBond);
-    } else if (calstr == "UnitedStates/NERC") {
-        pcal = new UnitedStates(UnitedStates::NERC);
-    }
-
-    return pcal;
-}
-
 
 boost::shared_ptr<IborIndex> buildIborIndex(std::string type,
                                             const Handle<YieldTermStructure>& iborStrc){
-
     if (type == "Euribor10M") 
         return boost::shared_ptr<IborIndex>(new Euribor10M(iborStrc));
     if (type == "Euribor11M") 
